--- a/stats_naissances.ipynb
+++ b/stats_naissances.ipynb
@@ -108,7 +108,7 @@
       "source": [
         "L'Insee nous met à disposition le nombre total de naissance en france, jour par jour de 1968 à 2017.\n",
         "\n",
-        "Nous allons explorer ce fichier pour caractériser les principaux facteurs d'influence sur ce nombre de naissance journalier"
+        "Nous allons explorer ce fichier pour caractériser les principaux facteurs d'influence sur ce nombre de naissance journalier."
       ]
     },
     {
@@ -1030,7 +1030,7 @@
         "On retombe sur les même conclusions: effet du jour et du mois, mais pas de la lune. Par contre, il semble que le minimum des mois n'est pas en avril mais plutot vers decembre.\n",
         "\n",
         "Il faut maintenant vérifier nos intuitions via un modèle linéaire.\n",
-        "Pour celà, on mais les jours et les mois en facteurs et on fait une régression."
+        "Pour cela, on met les jours et les mois en facteurs et on fait une régression."
       ]
     },
     {
@@ -1358,7 +1358,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Outre les variations saisonnières et l'effet week-end, on peut noter que si mercredi, jeudi et vendredi sont équivalents, il semble y avoir un léger report de naissances de lundi à mardi, avec un \"creu\" le lundi et un \"pic\" le mardi, de presque 50 naissance en moyenne."
+        "Outre les variations saisonnières et l'effet week-end, on peut noter que si mercredi, jeudi et vendredi sont équivalents, il semble y avoir un léger report de naissances de lundi à mardi, avec un \"creux\" le lundi et un \"pic\" le mardi, de presque 50 naissances en moyenne."
       ]
     }
   ]
